floats left and right 2 sections of nav, weird issue: ul padding needs to be 0 but cssreset doesnt apply?

--- a/assets/input.scss
+++ b/assets/input.scss
@@ -1,4 +1,16 @@
 nav li {
   list-style: none;
-  display: inline;
+  display: inline-block;
+}
+
+ul {
+  padding: 0;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
 }
