--- a/assets/input.scss
+++ b/assets/input.scss
@@ -1,10 +1,14 @@
-nav li {
-  list-style: none;
-  display: inline-block;
-}
-
-ul {
-  padding: 0;
+header {
+  background-color: blue;
+  height: 50px;
+  width: 100%;
+  ul {
+    padding: 0;
+  }
+  li {
+    list-style: none;
+    display: inline-block;
+  }
 }
 
 .left {
