--- a/assets/input.scss
+++ b/assets/input.scss
@@ -1,12 +1,17 @@
-header {
-  background-color: blue;
-  height: 50px;
+nav {
+  position: relative;
   width: 100%;
+  height: 50px;
+  background-color: blue;
+  margin: 0;
+  padding: 0;
   ul {
+    list-style-type: none;
     padding: 0;
+    margin: 0;
   }
   li {
-    list-style: none;
+    align-items: center;
     display: inline-block;
   }
 }
