--- a/assets/output.css
+++ b/assets/output.css
@@ -1,11 +1,16 @@
-header {
-  background-color: blue;
+nav {
+  position: relative;
+  width: 100%;
   height: 50px;
-  width: 100%; }
-  header ul {
-    padding: 0; }
-  header li {
-    list-style: none;
+  background-color: blue;
+  margin: 0;
+  padding: 0; }
+  nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0; }
+  nav li {
+    align-items: center;
     display: inline-block; }
 
 .left {
